--- a/Segment_2/Jsonify CSV.ipynb
+++ b/Segment_2/Jsonify CSV.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b0b9d500",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
     "             \n",
     "            # Assuming a column named 'No' to\n",
     "            # be the primary key\n",
-    "            key = rows['Count']\n",
+    "            key = rows['Name']\n",
     "            data[key] = rows\n",
     " \n",
     "    # Open a json writer, and use the json.dumps()\n",
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70c39890",
+   "id": "985c4770",
    "metadata": {},
    "outputs": [],
    "source": []
