--- a/Segment_3/NN Model/NN_model.ipynb
+++ b/Segment_3/NN Model/NN_model.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4e17cff9",
+   "id": "484aaf4e",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "08c6399d",
+   "id": "60f3478e",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ae078a19",
+   "id": "8fa3f3f6",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8f7f3dc6",
+   "id": "d213be12",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6d443330",
+   "id": "0f943d58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d2a5fc92",
+   "id": "1342b516",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ff684a77",
+   "id": "0a43d7f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "62669912",
+   "id": "3d8950c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f50d7c6c",
+   "id": "77f76e04",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7a79a7e3",
+   "id": "984dd9a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,8 +516,10 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b15dc7bb",
-   "metadata": {},
+   "id": "32e5de63",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -634,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f08953ad",
+   "id": "76210e75",
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1357b5c",
+   "id": "f9eab1c2",
    "metadata": {},
    "outputs": [],
    "source": []
